--- a/src/main/webapp/WEB-INF/operator/surgeryBefore.html
+++ b/src/main/webapp/WEB-INF/operator/surgeryBefore.html
@@ -452,8 +452,10 @@
                 </div>
                 <div class="layui-form-item">
                     <div class="layui-input-block" style="margin-left: 10px;">
+                        <button type="button" class="layui-btn" onclick="camLastPage()">上一页</button>
                         <button class="layui-btn" type="button" onclick="camSubmit()">提交</button>
                         <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                        <button type="button" class="layui-btn" onclick="camNextPage()">下一页</button>
                     </div>
                 </div>
             </form>
