--- a/src/main/webapp/WEB-INF/operator/surgeryBefore.html
+++ b/src/main/webapp/WEB-INF/operator/surgeryBefore.html
@@ -10,7 +10,7 @@
         <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
             <legend>患者信息登记</legend>
         </fieldset>
-
+        <input name="patientId" lay-verify="required" autocomplete="off" class="layui-input" type="text"/>
         <form id="patientForm" class="layui-form layui-form-pane" method="post" action="" style="margin-top: 20px;">
             <div class="layui-form-item">
                 <label class="layui-form-label">姓名</label>
