--- a/src/main/webapp/WEB-INF/operator/estimate.html
+++ b/src/main/webapp/WEB-INF/operator/estimate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <link rel="stylesheet" href="/js/ztree/css/zTreeStyle/zTreeStyle.css"></link>
-<head th:include="layout :: htmlhead" th:with="title='数据录入'"></head>
+<head th:include="layout :: htmlhead" th:with="title='手术评估'"></head>
 <body>
 
 <div  class="layui-container" style="width: 100%">
