--- a/src/main/webapp/WEB-INF/patients/patientsList.html
+++ b/src/main/webapp/WEB-INF/patients/patientsList.html
@@ -29,9 +29,7 @@
             <table id="patientList" lay-filter="patientTable"></table>
 
             <script type="text/html" id="optBar">
-                <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="surgerying">术中</a>
-                <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="surgeryAfter">术后</a>
-                <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="detailPatient">详情</a>
+                <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="surgeryedCAM">术后CAM</a>
             </script>
 
         </div>
