--- a/src/main/webapp/WEB-INF/operator/estimateBf.html
+++ b/src/main/webapp/WEB-INF/operator/estimateBf.html
@@ -20,165 +20,81 @@
                         <input id="hispitalNo" name="hispitalNo" autocomplete="off" class="layui-input" type="text" onkeyup="this.value=this.value.replace(/\D/g,'')"
                                onafterpaste="this.value=this.value.replace(/\D/g,'')"/>
                     </div>
-                    <button class="layui-btn"  lay-submit="" lay-filter="searchSubmit">提交</button>
+                    <button class="layui-btn"  lay-submit="" lay-filter="searchSubmit">搜索</button>
                     <button type="reset" class="layui-btn layui-btn-primary">重置</button>
                 </div>
             </form>
 
-            <div id="setCAM" class="layer_self_wrap" style="width:580px;display:none;">
-                <form id="camForm" class="layui-form layui-form-pane" method="post" action="" style="margin-top: 20px;">
-                    <input id="pageNum" type="hidden" name="pageNum"/>
+            <div id="estimateBF" class="layer_self_wrap" style="width:580px;display:none;">
+                <form id="estimateBForm" class="layui-form layui-form-pane" method="post" action="" style="margin-top: 20px;">
                     <input id="patientId" type="hidden" name="patientId"/>
                     <input id="id" type="hidden" name="id"/>
                     <div class="layui-form-item">
-                        <label class="layui-form-label">手术状态</label>
-                        <div class="layui-input-block">
-                            <select name="status">
-                                <option value="">请选择--手术状态</option>
-                                <option value="1">手术前</option>
-                                <option value="2">手术中</option>
-                                <option value="3">手术后</option>
-                            </select>
+                        <div class="layui-inline">
+                            <label class="layui-form-label"></label>
+                            <div class="layui-input-inline">
+                                <input name="name" autocomplete="off" class="layui-input" readonly type="text"/>
+                            </div>
+                        </div>
+                        <div class="layui-inline">
+                            <label class="layui-form-label">年龄</label>
+                            <div class="layui-input-inline">
+                                <input name="age" autocomplete="off" class="layui-input" readonly type="text"/>
+                            </div>
                         </div>
                     </div>
                     <div class="layui-form-item">
-                        <label class="layui-form-label">急性起病</label>
-                        <div class="layui-input-block">
-                            <select name="acute">
-                                <option value="">请选择--急性起病</option>
-                                <option value="1">不存在</option>
-                                <option value="2">较轻:三天至一周</option>
-                                <option value="3">中度:一天至三天</option>
-                                <option value="4">严重:一天之内</option>
-                            </select>
+                        <div class="layui-inline">
+                            <label class="layui-form-label">性别</label>
+                            <div class="layui-input-inline">
+                                <input name="sex" autocomplete="off" class="layui-input" readonly type="text"/>
+                            </div>
+                        </div>
+                        <div class="layui-inline">
+                            <label class="layui-form-label">受教育年限</label>
+                            <div class="layui-input-inline">
+                                <input name="eduYear" autocomplete="off" class="layui-input" readonly type="text"/>
+                            </div>
                         </div>
                     </div>
                     <div class="layui-form-item">
-                        <label class="layui-form-label">注意障碍</label>
-                        <div class="layui-input-block">
-                            <select name="attention">
-                                <option value="">请选择--注意障碍</option>
-                                <option value="1">不存在</option>
-                                <option value="2">轻度:1——2个错误</option>
-                                <option value="3">中度:3——4个错误</option>
-                                <option value="4">严重:5个或5个以上的错误</option>
-                            </select>
+                        <div class="layui-inline">
+                            <label class="layui-form-label">大手术史</label>
+                            <div class="layui-input-block">
+                                <input name="surgeryHis" value="1" title="是" type="radio"/>
+                                <input name="surgeryHis" value="2" title="否" type="radio"/>
+                            </div>
+                        </div>
+                        <div class="layui-inline">
+                            <label class="layui-form-label">脑部疾病</label>
+                            <div class="layui-input-block">
+                                <input name="brainHis" value="1" title="是" type="radio"/>
+                                <input name="brainHis" value="2" title="否" type="radio"/>
+                            </div>
                         </div>
                     </div>
                     <div class="layui-form-item">
-                        <label class="layui-form-label">思维混乱</label>
+                        <label class="layui-form-label">日常休闲活动情况</label>
                         <div class="layui-input-block">
-                            <select name="thinking">
-                                <option value="">请选择--思维混乱</option>
-                                <option value="1">不存在</option>
-                                <option value="2">轻度:偶尔短暂的言语模糊或不可理解,但尚能顺利交谈</option>
-                                <option value="3">中度:经常短暂的言语不可理解,对交谈有明显的影响</option>
-                                <option value="4">严重:大多数的时间言语不可理解,难以进行有效的交谈</option>
-                            </select>
+                            <input type="checkbox" name="department[homeWork]" title="家务"><div class="layui-unselect layui-form-checkbox"><span>家务</span><i class="layui-icon layui-icon-ok"></i></div>
+                            <input type="checkbox" name="department[playPk]" title="玩牌"><div class="layui-unselect layui-form-checkbox"><span>玩牌</span><i class="layui-icon layui-icon-ok"></i></div>
+                            <input type="checkbox" name="department[playChess]" title="玩象棋"><div class="layui-unselect layui-form-checkbox"><span>玩象棋</span><i class="layui-icon layui-icon-ok"></i></div>
+                            <input type="checkbox" name="department[readPaper]" title="读报纸"><div class="layui-unselect layui-form-checkbox"><span>读报纸</span><i class="layui-icon layui-icon-ok"></i></div>
+                            <input type="checkbox" name="department[monExcets]" title="晨练"><div class="layui-unselect layui-form-checkbox"><span>晨练</span><i class="layui-icon layui-icon-ok"></i></div>
+                            <input type="checkbox" name="department[playKid]" title="带小孩"><div class="layui-unselect layui-form-checkbox"><span>带小孩</span><i class="layui-icon layui-icon-ok"></i></div>
+                            <input type="checkbox" name="department[travel]" title="旅行"><div class="layui-unselect layui-form-checkbox"><span>旅行</span><i class="layui-icon layui-icon-ok"></i></div>
                         </div>
                     </div>
                     <div class="layui-form-item">
-                        <label class="layui-form-label">意识水平的改变</label>
+                        <label class="layui-form-label">日常休闲活动情况</label>
                         <div class="layui-input-block">
-                            <select name="sence">
-                                <option value="">请选择--意识水平的改变</option>
-                                <option value="1">不存在:机敏(正常)</option>
-                                <option value="2">轻度:警觉(对环境刺激高度警惕、过度敏感)</option>
-                                <option value="3">中度:嗜睡(瞌睡,但易于唤醒)或昏睡(难以唤醒)</option>
-                                <option value="4">严重:昏迷(不能唤醒)</option>
-                            </select>
+                            <input type="checkbox" name="surgeryBfIllness[gxbIllness]" title="冠心病"><div class="layui-unselect layui-form-checkbox"><span>冠心病</span><i class="layui-icon layui-icon-ok"></i></div>
+                            <input type="checkbox" name="surgeryBfIllness[gxyIllness]" title="高血压病"><div class="layui-unselect layui-form-checkbox"><span>高血压病</span><i class="layui-icon layui-icon-ok"></i></div>
+                            <input type="checkbox" name="surgeryBfIllness[tnbIllness]" title="糖尿病"><div class="layui-unselect layui-form-checkbox"><span>糖尿病</span><i class="layui-icon layui-icon-ok"></i></div>
+                            <input type="checkbox" name="surgeryBfIllness[lungIllness]" title="肺部感染"><div class="layui-unselect layui-form-checkbox"><span>肺部感染</span><i class="layui-icon layui-icon-ok"></i></div>
                         </div>
                     </div>
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">定向障碍</label>
-                        <div class="layui-input-block">
-                            <select name="directional">
-                                <option value="">请选择--定向障碍</option>
-                                <option value="1">不存在</option>
-                                <option value="2">轻度:偶尔短暂地存在时间或地点的定向错误(接近正确),但可自行纠正</option>
-                                <option value="3">中度:经常存在时间或地点的定向的错误,但自我定向好</option>
-                                <option value="4">严重:时间、地点及自我定向均差</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">记忆力减退</label>
-                        <div class="layui-input-block">
-                            <select name="memoryLoss">
-                                <option value="">请选择--记忆力减退</option>
-                                <option value="1">不存在</option>
-                                <option value="2">轻度:有一个词不能回忆或回忆错误</option>
-                                <option value="3">中度:有两个词不能回忆或回忆错误</option>
-                                <option value="4">严重:有三个词不能回忆或回忆错误</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">知觉障碍</label>
-                        <div class="layui-input-block">
-                            <select name="perceptionDisorders">
-                                <option value="">请选择--知觉障碍</option>
-                                <option value="1">不存在</option>
-                                <option value="2">轻度:只存在幻听</option>
-                                <option value="3">中度:存在幻视,有或没有幻听</option>
-                                <option value="4">严重:存在幻触、幻嗅或幻味,有或没有幻听</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">精神运动性兴奋</label>
-                        <div class="layui-input-block">
-                            <select name="psychoSportExcitement">
-                                <option value="">请选择--精神运动性兴奋</option>
-                                <option value="1">不存在</option>
-                                <option value="2">轻度:偶有坐立不安,焦虑、轻敲手指及抖动</option>
-                                <option value="3">中度:反复无目的地走动、激越明显</option>
-                                <option value="4">严重:行为杂乱无章,需要约束</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">精神运动性迟缓</label>
-                        <div class="layui-input-block">
-                            <select name="mentalSportSlow">
-                                <option value="">请选择--精神运动性迟缓</option>
-                                <option value="1">不存在</option>
-                                <option value="2">轻度:偶尔地比先前的活动、行为及动作缓慢</option>
-                                <option value="3">中度:经常保持一种姿势</option>
-                                <option value="4">严重:木僵状态</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">波动性</label>
-                        <div class="layui-input-block">
-                            <select name="wave">
-                                <option value="">请选择--波动性</option>
-                                <option value="1">不存在</option>
-                                <option value="2">轻度:一天之中偶尔地波动</option>
-                                <option value="3">中度:症状在夜间加重</option>
-                                <option value="4">严重:症状在一天中剧烈波动</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">睡眠—觉醒周期</label>
-                        <div class="layui-input-block">
-                            <select name="sleepWakeCycle">
-                                <option value="">请选择--睡眠—觉醒周期</option>
-                                <option value="1">不存在</option>
-                                <option value="2">轻度:日间偶有瞌睡,且夜间时睡时醒</option>
-                                <option value="3">中度:日间经常瞌睡,且夜间时睡时醒或不能入睡</option>
-                                <option value="4">严重:日间经常昏睡而影响交谈,且夜间不能入睡</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="layui-form-item">
-                        <div class="layui-input-block" style="margin-left: 10px;">
-                            <button class="layui-btn"  lay-submit="" lay-filter="camSubmit">提交</button>
-                            <button type="reset" class="layui-btn layui-btn-primary">重置</button>
-                        </div>
-                    </div>
+
                 </form>
             </div>
         </div>
